[project]
name = "structurefrommotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.3.4",
    "open3d>=0.19.0",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=12.0.0",
    "pycolmap>=3.12.6",
]
